--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -1,5 +1,6 @@
 body{
 	background-image: url(../imges/bg.jpg);
+	display: inline;
 	/*display: table-cell;
 	vertical-align: middle;*/
 }
@@ -96,12 +97,28 @@ body{
 	/*transform: rotateY(180deg);
 	-webkit-transform: rotateY(180deg);*/
 }
+div_button_group{
+	display: inline;
+}
 .button{
 	background: url(../imges/table.jpg);
 	width: 80px;
 	height: 50px;
 	color: white;
-	font-size: 20px;
+	font-size: 30px;
 	border-radius: 10px;
-	float: right;
+}
+.button_bg{
+	background: url(../imges/table.jpg);
+	width: 160px;
+	height: 50px;
+	color: white;
+	font-size: 30px;
+	border-radius: 10px;
+}
+label{
+	font-size: 35px;
+	color: white;
+	font-style:normal;
+	font-family: "微软雅黑";
 }
