--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -1,11 +1,22 @@
+html,body{
+	margin: 0;
+	padding: 0;
+}
 body{
 	background-image: url(../imges/bg.jpg);
+	
 	/*display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;*/
 	/*display: table-cell;
 	vertical-align: middle;*/
+}
+div{
+	border: red solid 2px;
+}
+.green{
+	background-color: yellowgreen;
 }
 .div_parent{
 	height: 100%;
@@ -19,8 +30,8 @@ body{
 }
 .div_column2{
 	webkit-box-flex: 2;
-	margin-top: 15px;
-	margin-bottom:15px ;
+	/*margin-top: 15px;
+	margin-bottom:15px ;*/
 }
 .div_column3{
 	webkit-box-flex: 1;
@@ -39,8 +50,8 @@ body{
 /*	display: inline-block;*/
 }
 #card{
-	width: 380px;
-	height: 400px;
+	/*width: 380px;
+	height: 400px;*/
 	position: relative;
 	margin: auto;
 	top:30px;
@@ -128,7 +139,6 @@ label{
 	font-style:normal;
 	font-family: "微软雅黑";
 	display: block;
-	width: 200px;
 }
 #mask {  
 	margin: auto;
@@ -146,9 +156,11 @@ label{
     }
     #game{
     	width: 100%;
-		margin-top: 0%;
+		margin: 0%;
     }
-    
+    .card{
+    	transform: scale(0.8,0.8);
+    }
 }
 .left{
 	float: left;
