--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -1,6 +1,8 @@
 html,body{
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 body{
 	background-image: url(../imges/bg.jpg);
@@ -54,14 +56,14 @@ div{
 	height: 400px;*/
 	position: relative;
 	margin: auto;
-	top:30px;
+	
 }
 .card{
 	width: 80px;
 	height: 120px;
 	position: absolute;
-	left: 10px;
-	top: 10px;
+	/*left: 10px;
+	top: 10px;*/
 }
 /*牌面和牌低容器*/
 .face{
@@ -160,7 +162,6 @@ label{
     }
     .card{
     	transform: scale(0.8,0.8);
-    	left: -10px,-10px;
     }
 }
 .left{
