--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -56,7 +56,7 @@ div{
 	height: 400px;*/
 	position: relative;
 	margin: auto;
-	
+	/*top:30px;*/
 }
 .card{
 	width: 80px;
@@ -159,10 +159,9 @@ label{
     #game{
     	width: 100%;
 		margin: 0%;
+		transform: scale(0.8,0.8);
     }
-    .card{
-    	transform: scale(0.8,0.8);
-    }
+    
 }
 .left{
 	float: left;
