--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -24,7 +24,7 @@ body{
 	height: 100%;
 	margin:auto;
 	display: -webkit-box;
-	justify-content: center;
+/*	justify-content: center;*/
 	/*-webkit-box-orient: horizontal;*/
 }
 .div_column1{
@@ -163,7 +163,8 @@ label{
 		margin: 0%;
     }
     #card{
-    	left: -12px;
+    	left: -8px;
+    	transform: scale(0.9,0.9);
     }
 }
 .left{
