--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -14,9 +14,17 @@ body{
 	/*display: table-cell;
 	vertical-align: middle;*/
 }
-/*div{
+div{
 	border: red solid 2px;
-}*/
+}
+.cover{
+	width: 100%;
+	height: 100%;
+	z-index: 1000;	
+	opacity: 0;
+	position: fixed;
+	
+}
 .green{
 	background-color: yellowgreen;
 }
