--- a/styles/matchgame.css
+++ b/styles/matchgame.css
@@ -14,9 +14,9 @@ body{
 	/*display: table-cell;
 	vertical-align: middle;*/
 }
-div{
+/*div{
 	border: red solid 2px;
-}
+}*/
 .cover{
 	width: 100%;
 	height: 100%;
